--- a/custom.css
+++ b/custom.css
@@ -2,5 +2,27 @@ header {
     background-image: url("https://www.sportsnet.ca/wp-content/uploads/2026/01/skinner.jpg");
  background-position: upper center;
  background-size: cover;
- 
 }
+ #hero-text{
+    color:black !important;
+    font-size: 92px;
+    text-shadow: 4px 2px 5px goldenrod;
+    font-weight: 800;
+}
+header p {
+    color:black;
+    font-size: 35px !important;
+    font-weight: 900 !important;
+    text-shadow: 1px 1px 2px goldenrod;
+}
+#cta{
+    color: goldenrod;
+    background-color: black;
+    border-color: black;
+}
+#cta:hover {
+    color: black;
+    background-color: goldenrod;
+    border-color: black;
+}
+#cta
