--- a/custom.css
+++ b/custom.css
@@ -2,6 +2,8 @@ header {
     background-image: url("https://www.sportsnet.ca/wp-content/uploads/2026/01/skinner.jpg");
  background-position: upper center;
  background-size: cover;
+ box-shadow: 0px 0px 30px gray;
+ margin-bottom: 50px;
 }
  #hero-text{
     color:black !important;
@@ -25,4 +27,19 @@ header p {
     background-color: goldenrod;
     border-color: black;
 }
-#cta
+#first-card-title {
+    color: black;
+    font-size: 35px;
+    text-shadow: 1px 1px 5px goldenrod;
+    font-weight: 900 !important;
+    text-align: center;
+}
+#first-card-reason {
+    color: black;
+    font-size: 25px;
+    font-weight: 750 !important;
+    text-align: center;
+}
+#card {
+    
+}
